# Pareser

./: CMakeLists.txt  README.MD  main.c
include/: math_functions.h  math_parser.h  number_parser.h  parser.h  tokenizer.h
include/visual/: node_dumper.h  token_dumper.h  tree_dumper.h
src/: math_functions.c  math_parser.c  number_parsers.c  parser.c  token_converter.c  tokenizer.c
src/visual/: node_dumper.c  token_dumper.c  tree_dumper.c
